- Added ability to export factor trees as PNG

02/07/2018 > Prime Number Finder version 1.2.6
- Improved 'About' page
- Fixed a bug that sometimes caused the 'Find Primes' statistics page to show incorrect data
- Fixed a bug that sometimes caused the application to freeze when deleting a task

04/24/2018 > Prime Number Finder version 1.3.0
- Improved UI
+ New export options
	+ Primes
		- Include comma's in numbers
	+ Factors
		- Include comma's in numbers
	+ Factor trees
		- Image background color
		- Vertical item spacing
		- Branch color
		- Branch width
		- Item text color
		- Item text size
		- Item background color
		- Item border color
		- Item border width
		- Prime factor text color
- Tasks will now show results in the task list when they are finished
+ Task options
	- Added option to show a notification when finished
	- Added option to automatically save results when finished
	+ 'Find Primes' task improvements
		- Can now use brute-force or sieve of Eratosthenes for searching
		- Added multi-threading support (brute-force only)
- Factor tree performance improvements
- Reduced memory usage for certain tasks
- Fixed a bug that sometimes caused saved files to be sorted by date incorrectly
- Added "scroll to top" and "scroll to bottom" buttons when viewing large saved files
- Added "Go to number" feature when viewing saved files
- Improved file saving and loading speed

04/25/2018 > Prime Number Finder version 1.3.1
- Fixed a bug that sometimes caused the application to crash after resuming
- Fixed a bug that caused the app to crash when arabic characters were used
- Minor UI bug fix

04/26/2018 > Prime Number Finder version 1.3.2
- Fixed a bug that sometimes caused paused tasks to resume when switching activities.
- Added setting to allow collection of anonymous crash logs

04/28/2018 > Prime Number Finder version 1.3.3
- Fixed a bug that sometimes caused the app to crash after inputting numbers while "infinity" was displayed in the text box.