@@ -177,7 +177,7 @@ public class FindFactorsFragment extends Fragment implements FloatingActionButto
         rootView.requestFocus();
 
         //Scroll to Results fragment if started from a notification
-        if (intent.getSerializableExtra("taskId") != null){
+        if (intent != null && intent.getSerializableExtra("taskId") != null){
             viewPager.setCurrentItem(1);
         }
 
