@@ -322,7 +322,7 @@ public class FindPrimesFragment extends Fragment implements FloatingActionButton
         rootView.requestFocus();
 
         //Scroll to Results fragment if started from a notification
-        if (intent.getSerializableExtra("taskId") != null) {
+        if (intent != null && intent.getSerializableExtra("taskId") != null) {
             viewPager.setCurrentItem(1);
         }
 
