@@ -102,3 +102,8 @@
 
 04/28/2018 > Prime Number Finder version 1.3.3
 - Fixed a bug that sometimes caused the app to crash after inputting numbers while "infinity" was displayed in the text box.
+
+05/??/2018 > Prime Number Finder version 1.3.4
+- Minor UI improvements
+- Improved support for other locales
+- Bug fixes
